# m1-sdk

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  MIGRATIONS.md  Makefile  README.md
Lib/: README.md  (+12 more)
examples/mach1spatial-c/commandline/: CMakeLists.txt  README.md
lib/: .travis.yml  CMakeLists.txt  CMakeLists_static.txt  Mach1AudioTimelineCAPI.cpp  Mach1AudioTimelineCAPI.h  Mach1AudioTimelineCore.cpp  Mach1AudioTimelineCore.h  Mach1Decode.cpp  Mach1Decode.h  Mach1DecodeCAPI.cpp  Mach1DecodeCAPI.h  Mach1DecodeCore.cpp  Mach1DecodeCore.h  Mach1DecodeEmscripten.cpp  Mach1DecodeEmscripten.js  Mach1DecodeMINCAPI.cpp  Mach1DecodeMINCAPI.h  Mach1DecodeMINCore.cpp  Mach1DecodeMINCore.h  Mach1DecodePositionalCAPI.cpp  Mach1DecodePositionalCAPI.h  Mach1DecodePositionalCore.cpp  Mach1DecodePositionalCore.h  Mach1DecodePositionalEmscripten.cpp  Mach1DecodePositionalEmscripten.js  Mach1EncodeCAPI.cpp  Mach1EncodeCAPI.h  Mach1EncodeCore.cpp  Mach1EncodeCore.h  Mach1EncodeEmscripten.cpp  Mach1EncodeEmscripten.js  Mach1GenerateCoeffs.cpp  Mach1KeyPoint.h  Mach1Point3D.h  Mach1Point3DCore.cpp  Mach1Point3DCore.h  Mach1Point4D.h  Mach1Point4DCore.cpp  Mach1Point4DCore.h  Mach1TranscodeCAPI.cpp  (+19 more)
lib/include/M1DSP/: M1DSPDynamics.cpp  M1DSPDynamics.h  M1DSPFilters.cpp  M1DSPFilters.h  M1DSPUtilities.cpp  M1DSPUtilities.h
lib/include/atmos/: ADMParser.h
lib/include/json/: json.h
lib/swig/: FloatArrayModule.i  Mach1DecodeModule.i  Mach1DecodePositionalModule.i  Mach1EncodeModule.i  Mach1Point3DModule.i  Mach1Point4DModule.i  StringModule.i  UtilsModule.i  _build_on_mac_for_go.sh  _build_on_mac_for_jni.sh  _build_on_mac_for_python.sh  _build_on_win_for_jni.bat
lib/swig/jni/: Mach1Decode.java
lib/tests/: .gitignore  CMakeLists.txt  _build_on_linux_for_linux.sh  _build_on_osx_for_osx.sh  _build_on_win_for_win.bat  mach1encode-test.cpp
lib/tests/Mach1DecodePositionalTest/: mach1decodepositional-test.cpp
libmach1spatial/: .clang-format  .clang-tidy  CMakeLists.txt  Mach1AudioTimelineCore.cpp  Mach1DecodeCore.h  Mach1DecodePositionalEmscripten.cpp  Mach1DecodePositionalEmscripten.js  Mach1EncodeCAPI.h  Mach1EncodeCore.cpp  Mach1EncodeCore.h  Mach1EncodeEmscripten.js  Mach1Point4D.h  Mach1TranscodeCore.h  Mach1TranscodeEmscripten.cpp  README.md
libmach1spatial/include/: CMakeLists.txt
libmach1spatial/swig/: Mach1Decode.i  Mach1DecodePositional.i  Mach1DecodePositional_wrap.c  Mach1Decode_wrap.c  Mach1Encode.i  Mach1Encode_wrap.c  Mach1FloatArrayModule_wrap.c  Mach1Point3D.i  Mach1Point3DModule_wrap.c  Mach1Point4D.i  Mach1Point4DModule_wrap.c  Mach1Transcode.i  Mach1TranscodeModule.i  Mach1Transcode_wrap.c  Mach1UtilsModule.i
libmach1spatial/transcode/: CMakeLists.txt
source/: .gitignore  CMakeLists.txt  Mach1AudioTimelineCAPI.cpp  Mach1AudioTimelineCAPI.h  Mach1AudioTimelineCore.cpp  Mach1AudioTimelineCore.h  Mach1DecodeCAPI.cpp  Mach1DecodeCAPI.h  Mach1DecodeCore.cpp  Mach1DecodeCore.h  Mach1DecodeEmscripten.cpp  Mach1DecodeEmscripten.js  Mach1DecodeMINCAPI.cpp  Mach1DecodeMINCAPI.h  Mach1DecodeMINCore.cpp  Mach1DecodeMINCore.h  Mach1DecodePositionalCAPI.cpp  Mach1DecodePositionalCAPI.h  Mach1DecodePositionalCore.cpp  Mach1DecodePositionalCore.h  Mach1DecodePositionalEmscripten.cpp  Mach1DecodePositionalEmscripten.js  Mach1EncodeCAPI.cpp  Mach1EncodeCAPI.h  Mach1EncodeCore.cpp  Mach1EncodeCore.h  Mach1EncodeEmscripten.cpp  Mach1EncodeEmscripten.js  Mach1GenerateCoeffs.cpp  Mach1GenerateCoeffs.h  Mach1KeyPoint.h  Mach1Point3D.cpp  Mach1Point3D.h  Mach1Point3DCore.cpp  Mach1Point3DCore.h  Mach1Point4D.cpp  Mach1Point4D.h  Mach1Point4DCore.cpp  Mach1Point4DCore.h  Mach1TranscodeCAPI.cpp  (+22 more)
source/.deps/: libsimple_channel_mixer_plugin_la-Mach1DecodeCAPI.Plo  libsimple_channel_mixer_plugin_la-Mach1DecodeCore.Plo  libsimple_channel_mixer_plugin_la-Mach1Point3DCore.Plo  libsimple_channel_mixer_plugin_la-Mach1Point4DCore.Plo  libspatialaudio_plugin_la-Mach1DecodeCAPI.Plo  libspatialaudio_plugin_la-Mach1DecodeCore.Plo  libspatialaudio_plugin_la-Mach1Point3DCore.Plo  libspatialaudio_plugin_la-Mach1Point4DCore.Plo
source/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
source/cmake/: armhf-neon-vfpv4.cmake  armhf-toolchain.cmake  cortex-m0-toolchain.cmake  rpi-toolchain.cmake
source/scripts/: _build_macos.sh  add_signing_key.sh  android-ndkr16b_build.sh  android-ndkr26d_build.sh  android_build.sh  arm-cortexm0_build.sh  arm-hf-neon-vfpv4_build.sh  arm-hf_build.sh  copy_includes_dev.sh  copy_includes_local_release.sh  copy_includes_release.sh  copy_libs_to_examples.sh  copy_to_examples.sh  copy_to_examples_release.sh  deploy.sh  examples_linking_test.sh  git-jitpack-module.sh  git-node-decode-module.sh  git-node-encode-module.sh  git-node-transcode-module.sh  git-pod-module.sh  git-prepare-submodules.sh  git-ue-module.sh  git-unity-module.sh  git-webplayer-module.sh  ios_build.sh  ios_setup.sh  linux-arm_build.sh  linux_build.sh  linux_simpletest.sh  linux_test.sh  macos-10-13_build.sh  macos-10-13_setup.sh  macos-10-13_test.sh  macos_build.sh  macos_setup.sh  macos_test.sh  remove_signing_key.sh  rpi_build.sh  upload_includes.sh  (+7 more)
source/swig/: Mach1FloatArrayModule.i  Mach1Point3DModule.i  _build_on_mac_for_jni.sh
source/tests/: .gitignore  CMakeLists.txt  _build_on_linux_for_linux.sh  _build_on_osx_for_osx.sh  _build_on_win_for_win.bat
tests/: CMakeLists.txt  _build_on_linux_for_linux.sh  _build_on_osx_for_osx.sh  _build_on_win_for_win.bat  mach1encode-test.cpp
tests/Mach1DecodePositionalTests/: mach1decodepositional-tests.cpp
tests/Mach1DecodeTests/: mach1decode-tests.cpp
tests/Mach1Decode_Source/: CMakeLists.txt
tests/Mach1EncodeTests/: mach1encode-tests.cpp
tests/Mach1Encode_Source/: CMakeLists.txt
tests/Mach1SpatialTests/: mach1spatial-tests.cpp
tests/Mach1TranscodeRenderTest/: .gitignore  CMakeLists.txt
tests/Mach1TranscodeTests/: mach1transcode-tests.cpp
tests/Mach1Transcode_Source/: CMakeLists.txt
tests/spatial-signal-testing/: CMakeLists.txt  README.md
(+2445 files in other folders)
